Fixed issue with toolbar covering top of text after jumping to text anchors.

--- a/cgi/yawat.css
+++ b/cgi/yawat.css
@@ -241,7 +241,15 @@ div.marginButton:hover {
 div.pane {
     margin: 10;
     margin-left: 30;
-    margin-right: 30
+    margin-right: 30;
+    /* margin-bottom: 30; */
+}
+
+:target:before {
+    content:"";
+    display: block;
+    height: 25px;
+    margin: -25px 0 0;
 }
 
 #pleaseWaitBox {
